// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:fieldSet 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="cxd-Collapse is-active no-border"
        >
          <legend
            class="cxd-Collapse-header bg-dark noTitle"
          >
            <span
              class="cxd-Collapse-arrow-wrap"
            >
              <icon-mock
                classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
                icon="right-arrow-bold"
              />
            </span>
          </legend>
          <div
            class="cxd-Collapse-contentWrapper"
          >
            <div
              class="cxd-Collapse-body bg-white"
            >
              <div
                class="cxd-Collapse-content"
              >
                <div
                  class="cxd-Form--horizontal"
                >
                  <div
                    class="cxd-Form-item cxd-Form-item--horizontal"
                    data-amis-name="text"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label cxd-Form-itemColumn--normal"
                    >
                      <span />
                    </label>
                    <div
                      class="cxd-Form-value"
                    >
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with mode 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="cxd-Collapse is-active"
        >
          <legend
            class="cxd-Collapse-header noTitle"
          />
          <div
            class="cxd-Collapse-contentWrapper"
          >
            <div
              class="cxd-Collapse-body"
            >
              <div
                class="cxd-Collapse-content"
              >
                <div
                  class="cxd-Form--horizontal"
                >
                  <div
                    class="cxd-Form-item cxd-Form-item--horizontal"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label cxd-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-value"
                    >
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text1"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--horizontal"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label cxd-Form-itemColumn--normal"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-value"
                    >
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text2"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with mode 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="cxd-Collapse is-active"
        >
          <legend
            class="cxd-Collapse-header noTitle"
          />
          <div
            class="cxd-Collapse-contentWrapper"
          >
            <div
              class="cxd-Collapse-body"
            >
              <div
                class="cxd-Collapse-content"
              >
                <div
                  class="cxd-Form--inline"
                >
                  <div
                    class="cxd-Form-item cxd-Form-item--inline"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-value"
                    >
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text1"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--inline"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-value"
                    >
                      <div
                        class="cxd-Form-control cxd-TextControl"
                      >
                        <div
                          class="cxd-TextControl-input"
                        >
                          <input
                            autocomplete="off"
                            class=""
                            name="text2"
                            placeholder=""
                            size="10"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with mode 3`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="cxd-Collapse is-active"
        >
          <legend
            class="cxd-Collapse-header noTitle"
          />
          <div
            class="cxd-Collapse-contentWrapper"
          >
            <div
              class="cxd-Collapse-body"
            >
              <div
                class="cxd-Collapse-content"
              >
                <div
                  class="cxd-Form--justify"
                >
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text1"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text2"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:fieldSet with titlePosition & collapseTitle & title 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <fieldset
          class="cxd-Collapse is-active cxd-Collapse--title-bottom"
        >
          <div
            class="cxd-Collapse-contentWrapper"
          >
            <div
              class="cxd-Collapse-body"
            >
              <div
                class="cxd-Collapse-content"
              >
                <div
                  class="cxd-Form--normal"
                >
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-amis-name="text1"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本1
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text1"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-amis-name="text2"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField fr-view"
                        >
                          <span>
                            文本2
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-Form-control cxd-TextControl"
                    >
                      <div
                        class="cxd-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          class=""
                          name="text2"
                          placeholder=""
                          size="10"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cxd-Collapse-header"
          >
            <span
              class="cxd-Collapse-arrow-wrap"
            >
              <icon-mock
                classname="cxd-Collapse-arrow icon icon-right-arrow-bold cxd-Collapse-arrow"
                icon="right-arrow-bold"
              />
            </span>
            <span
              class="cxd-TplField fr-view"
            >
              <span>
                收起设置
              </span>
            </span>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;
